k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: k8s-demo
  ports:
  - port: 80
    targetPort: 8080
